--- a/style.css
+++ b/style.css
@@ -196,3 +196,55 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+/*responsividade*/
+@media (max-width: 768px) {
+    body {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: static;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .sidebar h4 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .sidebar a {
+        width: auto;
+        text-align: center;
+        padding: 10px 15px;
+    }
+
+    .content {
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+    .col-md-4, .col-md-6 {
+        width: 100%;
+    }
+
+    .links__redes__sociais {
+        width: 90%;
+        margin: 10px auto;
+        display: block;
+    }
+
+    .table {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+}
